apps/overlays/staging/wikijs/wikijs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs-ingress
  namespace: wikijs
spec:
  ingressClassName: traefik
  rules:
    - host: wiki.staging.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wikijs
                port:
                  number: 3000
