apps/overlays/staging/wikijs/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: wikijs-ingress
  namespace: wikijs
spec:
  endpointSelector:
    matchLabels:
      app: wikijs
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            k8s:app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
